<resources>
    <string name="app_name">DonateWithUs</string>

    <string name="app_text_heading01">15sp</string>
    <string name="app_text_heading02">10sp</string>

    <!--    Activity Main-->

    <!--    Login Activity -->
    <string name="str_login_emailAddress_hint">Enter Email</string>
    <string name="str_login_password_hint">Enter Password</string>
    <string name="str_login_loginBtn">Login</string>
    <string name="str_login_imageDescription">Login Banner Image</string>
    <string name="str_login_registerText">Don\'t have an account? Register</string>

    <!--    Activity Register-->
    <string name="str_register_userReg_btn">User \n Register</string>
    <string name="str_register_clubReg_btn">Club \n Register</string>
    <string name="str_register_et_TitleText">Register</string>
    <string name="str_register_imageDescription">Login Banner Image</string>

</resources>