<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity"
    android:padding="30dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/banner_image_4"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_et_emailAddress"
        android:hint="@string/str_login_emailAddress_hint"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_login_password_hint"
        android:id="@+id/login_et_password"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn_loginButton"
        android:text="@string/str_login_loginBtn"
        android:background="@drawable/button_round_primary"
        />

    <TextView
        android:id="@+id/loginPageQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/str_login_registerText"
        android:textColor="@color/black" />



</LinearLayout>